--- a/kasheba-frontend/package.json
+++ b/kasheba-frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
@@ -19,7 +20,8 @@
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "wagmi": "^2.12.7"
+    "wagmi": "^2.12.7",
+    "web3": "^4.12.1"
   },
   "devDependencies": {
     "@types/node": "^20",
